--- a/build.gradle
+++ b/build.gradle
@@ -30,5 +30,6 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:0.11.+'
+    // compile 'com.facebook.react:react-native:0.11.+'
+    compile project(':ReactAndroid')
 }
